Report illustration is now movable (+ some improvements)

--- a/template/add.html
+++ b/template/add.html
@@ -6,13 +6,12 @@
 		</div>
 	</div>
 </nav>
-
 <nav class="navbar navbar-material-lime navbar-50" ng-controller="PictureController"><i class="mdi-image-panorama picto"  style="line-height: 30px;" ng-hide="newReport.b64pic"></i>
 <form ng-submit="addPicture()" role="form2" name="addform">
-	<div class="item-full material-lime-300" ng-mousedown="count = count + 1" ng-init="count=0">
-	<div class="img-item" ng-mousedown="count = count + 1" ng-init="count=0">
+	<div class="item-full material-lime-300" >
+	<div class="img-item" >
 		<img class="test" ng-hide="newReport.b64pic"></img>
-		<img class="test" ng-show="newReport.b64pic" ng-src="{{newReport.b64pic}}" ng-mousedown="count = count + 1" ng-init="count=0"></img>
+		<img  my-draggable class="test" ng-show="newReport.b64pic" ng-src="{{newReport.b64pic}}" ></img>
 	</div>
 	
 	<span class="btn btn-fab btn-raised btn-middle btn-material-purple mdi-image-camera-alt"  ng-click="selectFile()"></span>
@@ -28,7 +27,7 @@
 		<div class="col-md-12">
 
 			<form ng-locations ng-show="newReport.reportForm" ng-init="newReport.reportForm = true" ng-submit="addReport()" role="form">
-				<div class="field"><label class="field-label">Intitulé</label><input ng-disabled="newReport.endOfProcess" class="field-input " type="text" ng-model="newReport.name" required  ng-mousedown="count = count + 1" ng-init="count=0"/></div>
+				<div class="field"><label class="field-label">Intitulé</label><input ng-disabled="newReport.endOfProcess" class="field-input " type="text" ng-model="newReport.name" required /></div>
 				<div class="field"><label class="field-label">Commentaire</label><textarea rows="3" ng-disabled="newReport.endOfProcess" class="field-input field-textarea" ng-model="newReport.description"/></textarea></div>
 				<div class="field"><label class="field-label">Ligne</label>
 				<select name="line" ng-model="newReport.location1" ng-change="populateSub(newReport.location1)" ng-options="item.id as item.name for item in locations" class="field-input" ng-disabled="newReport.endOfProcess" required>
@@ -47,11 +46,6 @@
 					<input ng-hide="newReport.endOfProcess" class="btn btn-material-lime btn-primary" type="submit" value="SUIVANT"/>
 				</div>
 			<form>
-alors : {{MouseMoveCount}}
-
-
-count: {{count}}
-			
 		</div>
 	</div>
 </div>
