--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ html, body, #view, .navbar-50 , form {
 
 .button {
   font-size: 14px;
-  text-transform : capitalize;
+  text-transform : uppercase;
 }
 
 .note {
@@ -170,12 +170,21 @@ width: 100%;
 z-index: 9999;
 }
 
+.snackbar{
+border-radius: 0px;
+}
+
 .snackbar.snackbar-opened {
 height: 48px;
 margin-bottom: 0px;
 }
 
-.snackbar{
+.snackbar-action {
+float:right;
+margin-top:0px;
+margin-bottom:0px;
+padding-top:0px;
+padding-bottom:0px;
 border-radius: 0px;
 }
 
