--- a/template/search.html
+++ b/template/search.html
@@ -12,11 +12,8 @@
 		<a href="#add" class="btn btn-fab btn-raised  btn-bottom btn-material-red mdi-content-add"></a>
 	</div>
 <!-- 	<div class="row"> -->
-	<div ng-show="nogo">
-		<p>Cette fonction necessite l'activation de la géolocalisation. </p>
-	</div>
 		<div ng-show="go" ng-repeat ="report in reports" class="row">
-		<div class="col-xs-12 card shadow-z-2">
+		<div class="col-xs-* card shadow-z-2">
 			<div class="list-item">
 			<a href="#report/{{report.id}}">
 				<div class="item material-lime-300">
