--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ color: #FFF;
 }
 
 .navbar-50 {
-  max-height: 40%;
+  max-height:30%;
 }
 
 .navbar-nav {
@@ -227,15 +227,23 @@ z-index:999;
 }
 
 .btn-middle {
-position: absolute; 
-bottom:-28px;
-right: 16px;
+position: relative; 
+bottom:30px;
+float : right;
+right:16px;
+
 }
 
 /***************************************/
 /* Card */
 .card {
   margin-top:8px;
+  margin-bottom:8px;
+  height:100%;
+}
+
+.unic-card {
+  margin-top:0px;
   margin-bottom:8px;
 }
 
@@ -253,7 +261,7 @@ right: 16px;
   margin-bottom:0px;
 }
 
-.card .btn {
+.card .btn-primary {
   padding: 8px 10px;
 }
 
