--- a/template/add.html
+++ b/template/add.html
@@ -10,8 +10,9 @@
 <div class="container container-span">
 <div class="card unic-card shadow-2">
 	<div class="navbar-50" ng-controller="PictureController">
-	<form ng-submit="addPicture()" role="form2" name="addform">
+		<form ng-submit="addPicture()" role="form2" name="addform">
 		<div class="item-full material-lime-300">
+			<i class="mdi-image-panorama picto" style="line-height:30px;" ng-hide="newReport.b64pic"></i>
 			<div class="img-item">
 				<img class="test" ng-hide="newReport.b64pic"></img>
 				<img  my-draggable class="test" ng-show="newReport.b64pic" ng-src="{{newReport.b64pic}}" ></img>
