--- a/css/main.css
+++ b/css/main.css
@@ -180,19 +180,20 @@ overflow:visible;
 
 .snackbar-container {
 position: fixed;
-left: 0;
+left: 16px;
 bottom: 0;
-width: 100%;
+width: 75%;
 z-index: 9999;
+  max-width: 768px;
 }
 
 .snackbar{
-border-radius: 0px;
+border-radius: 4px;
 }
 
 .snackbar.snackbar-opened {
-height: 48px;
-margin-bottom: 0px;
+height: 54px;
+margin-bottom: 16px;
 }
 
 .snackbar-action {
