--- a/template/index.html
+++ b/template/index.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-material-lime shadow-z-1" role="navigation">
+<nav class="navbar navbar-fixed-top navbar-material-lime shadow-z-1" role="navigation">
 	<div class="container-header">
 		<div class="navbar-header">
 			<ul class="nav navbar-nav">
