--- a/template/report.html
+++ b/template/report.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-material-lime" role="navigation">
+<nav class="navbar navbar-fixed-top navbar-material-lime" role="navigation">
 	<div class="container-header">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#search"><i class="mdi-navigation-arrow-back"  style="line-height: 30px;"></i></a>
@@ -6,17 +6,15 @@
 		</div>
 	</div>
 </nav>
-<nav class="navbar navbar-material-lime">
+<div class="container">
+	<div class="card unic-card shadow-2">
 	<div class="item-full material-lime-300">
 	<div class="img-item">
 		<img ng-show="report.picture" class="test" ng-src="{{report.picture.thumbnail}}"></img>
 		<div class="text display2">{{report.name}}</div>
 	</div>
-</div>
-</nav>
+	</div>
 
-
-<div class="container">
 	<div class="row">
 		<div class="col-md-12"><div class="note">Description</div>{{report.description}}</div>
 	</div>
@@ -27,4 +25,5 @@
 			{{report.location.parent}} - {{report.location.name}}
 		</div>
 	</div>
+</div>
 </div>
