--- a/template/search.html
+++ b/template/search.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-material-lime shadow-z-1" role="navigation">
+<nav class="navbar navbar-fixed-top navbar-material-lime shadow-z-1" role="navigation">
 	<div class="container-header">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#"><i class="mdi-navigation-arrow-back"  style="line-height: 30px;"></i></a>
