--- a/template/add.html
+++ b/template/add.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-fixed-top navbar-material-lime shadow-z-1" role="navigation" >
+<nav class="navbar navbar-fixed-top navbar-material-lime shadow-z-2" role="navigation" >
 	<div class="container-header">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#"><i class="mdi-navigation-close"  style="line-height: 30px;"></i></a>
@@ -8,7 +8,7 @@
 </nav>
 
 <div class="container ">
-<div class="card unic-card shadow-2">
+<div class="card unic-card shadow-z-1">
 	<div class="navbar-50" ng-controller="PictureController">
 		<form ng-submit="addPicture()" role="form2" name="addform">
 		<div class="item-full material-lime-300">
