--- a/template/report.html
+++ b/template/report.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-fixed-top navbar-material-lime" role="navigation">
+<nav class="navbar navbar-fixed-top navbar-material-lime shadow-z-2" role="navigation">
 	<div class="container-header">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#search"><i class="mdi-navigation-arrow-back"  style="line-height: 30px;"></i></a>
@@ -7,7 +7,7 @@
 	</div>
 </nav>
 <div class="container">
-	<div class="card unic-card shadow-2">
+	<div class="card unic-card shadow-z-1">
 	<div class="item-full material-lime-300">
 	<div class="img-item">
 		<img ng-show="report.picture" class="test" ng-src="{{report.picture.thumbnail}}"></img>
