localstorage & vote handling

--- a/template/search.html
+++ b/template/search.html
@@ -34,7 +34,7 @@
 				</div>
 			</div>
 			<hr>
-			<div class="card-body-actions" ng-controller="VoteController"><span href="" class="button btn btn-material-lime btn-flat btn-primary" id="action_{{report.id}}" ng-click="vote(report.id)">CONFIRM</span>
+			<div class="card-body-actions" ng-controller="VoteController" ng-init="check"><span href="" class="button btn btn-material-lime btn-flat btn-primary" id="action_{{report.id}}" ng-click="vote(report.id)">CONFIRM</span>
 			</div>
 		</div>
 <!-- 		</div> -->
