--- a/template/report.html
+++ b/template/report.html
@@ -22,7 +22,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="note">Localisation</div>
-			{{report.location.parent}} - {{report.location.name}}
+			{{report.location[0].parent}} - {{report.location[0].name}}
 		</div>
 	</div>
 </div>
