--- a/template/search.html
+++ b/template/search.html
@@ -26,7 +26,7 @@
 			</a>
 			</div>
 			<div class="card-body">
-				<div class="card-body-info subhead">{{report.location.parent}} - {{report.location.name}}
+				<div class="card-body-info subhead">{{report.location[0].parent}} - {{report.location[0].name}}
 				</div>
 				<div class="card-body-info subhead">{{report.nb_vote}} votes
 				</div>
