--- a/template/add.html
+++ b/template/add.html
@@ -13,9 +13,9 @@
 		<form ng-submit="addPicture()" role="form2" name="addform">
 		<div class="item-full material-lime-300">
 			<i class="mdi-image-panorama picto" style="line-height:30px;" ng-hide="newReport.b64pic"></i>
-			<div class="img-item">
+			<div class="img-item" id="touch">
 				<img class="test" ng-hide="newReport.b64pic"></img>
-				<img  my-draggable class="test" ng-show="newReport.b64pic" ng-src="{{newReport.b64pic}}" ></img>
+				<img  picture-tool class="test" ng-show="newReport.b64pic" ng-src="{{newReport.b64pic}}" id="pic" ></img>
 			</div>
 		</div>
 		<span class="btn btn-fab btn-raised btn-middle btn-material-purple mdi-image-camera-alt" ng-click="selectFile()"></span>
