--- a/template/map.html
+++ b/template/map.html
@@ -6,7 +6,7 @@
 		</div>
 	</div>
 </nav>
-<div class="container">
-
-
+<div class="container" >
+    <leaflet markers="markers" center="osloCenter" width="100%" height="100%"></leaflet>
 </div>
+
