--- a/template/map.html
+++ b/template/map.html
@@ -7,6 +7,9 @@
 	</div>
 </nav>
 <div class="container" >
-    <leaflet markers="markers" center="osloCenter" width="100%" height="100%"></leaflet>
+<!-- 	    <ul>
+        <li><strong ng-bind="eventDetected"></strong> caught in listener.</li>
+    </ul> -->
+    <leaflet geojson="geojson" defaults="defaults"  center="osloCenter" width="100%" height="100%"></leaflet>
 </div>
 
