--- a/template/map.html
+++ b/template/map.html
@@ -7,9 +7,9 @@
 	</div>
 </nav>
 <div class="container" >
-<!-- 	    <ul>
+    <ul style="display:none;">
         <li><strong ng-bind="eventDetected"></strong> caught in listener.</li>
-    </ul> -->
-    <leaflet geojson="geojson" defaults="defaults"  center="osloCenter" width="100%" height="100%"></leaflet>
+    </ul> 
+    <leaflet geojson="geojson" markers="markers" defaults="defaults"  center="center" width="100%" height="100%"></leaflet>
 </div>
 
