--- a/template/map.html
+++ b/template/map.html
@@ -7,9 +7,10 @@
 	</div>
 </nav>
 <div class="container" >
-    <ul style="display:none;">
+    <!-- <ul style="display:none;"> -->
+    <ul >
         <li><strong ng-bind="eventDetected"></strong> caught in listener.</li>
     </ul> 
-    <leaflet geojson="geojson" markers="markers" defaults="defaults"  center="center" width="100%" height="100%"></leaflet>
+    <leaflet geojson="geojson" markers="markers" paths="paths" defaults="defaults" center="center" width="100%" height="100%"></leaflet>
 </div>
 
