--- a/template/map.html
+++ b/template/map.html
@@ -7,8 +7,7 @@
 	</div>
 </nav>
 <div class="container" >
-    <!-- <ul style="display:none;"> -->
-    <ul >
+    <ul style="display:none;"> 
         <li><strong ng-bind="eventDetected"></strong> caught in listener.</li>
     </ul> 
     <leaflet geojson="geojson" markers="markers" paths="paths" defaults="defaults" center="center" width="100%" height="100%"></leaflet>
