Twitter Card for each Report page.

--- a/template/report.html
+++ b/template/report.html
@@ -1,3 +1,10 @@
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@brokenstuff">
+<meta name="twitter:creator" content="@brokenstuff">
+<meta name="twitter:title" content="{{report.name}}">
+<meta name="twitter:description" content="{{report.description}}">
+<meta name="twitter:image" content="{{report.picture.thumbnail}}">
+
 <nav class="navbar navbar-fixed-top navbar-material-lime shadow-z-2" role="navigation">
 	<div class="container-header">
 		<div class="navbar-header">
