--- a/template/report.html
+++ b/template/report.html
@@ -3,7 +3,7 @@
 <meta name="twitter:creator" content="@brokenstuff">
 <meta name="twitter:title" content="Report">
 <meta name="twitter:description" content="Report">
-<meta name="twitter:image" content="http://bs.lagaisse.fr">
+<meta name="twitter:image" content="http://bs.lagaisse.fr/uploads/55807337d2a10_tn.jpeg">
 
 <nav class="navbar navbar-fixed-top navbar-material-lime shadow-z-2" role="navigation">
 	<div class="container-header">
