--- a/css/main.css
+++ b/css/main.css
@@ -132,9 +132,14 @@ height: 100%;
   padding-right: 15px;
   padding-bottom: 15px;
   padding-left: 15px;
-}}
+}
+}
 
-
+@media (min-width: 375px) { /*hack pour empecher le chnagement de taille de la navbar */
+.container {
+  width: 375px;
+}
+}
 
 .row {
 margin-left:0px;
