--- a/template/search.html
+++ b/template/search.html
@@ -6,38 +6,43 @@
 		</div>
 	</div>
 </nav>
+
 <div class="container container-span">
+
 	<div ng-hide="loading"></div>
 	<div class="bottom">
 		<a href="#add" class="btn btn-fab btn-raised  btn-bottom btn-material-red mdi-content-add"></a>
 	</div>
-<!-- 	<div class="row"> -->
-		<div ng-show="go" ng-repeat ="report in reports" class="row">
-		<div class="col-xs-* card shadow-z-1">
-			<div class="list-item">
-			<a href="#report/{{report.id}}">
-				<div class="item material-lime-300">
-					<div class="text display1">{{report.name}}</div>
+
+	<div ng-show="go" class="row">
+		<div ng-repeat ="report in reports" class="col-xs-12 col-sm-6 ">
+			<div class="card shadow-z-1">
+				<div class="list-item">
+					<a href="#report/{{report.id}}">
+					<div class="item material-lime-300">
+						<div class="text display1">{{report.name}}</div>
 						<div class="img-item">
 							<img ng-show="report.picture" ng-src="{{report.picture.thumbnail}}"></img>
-							
 						</div>
+					</div>
+					</a>
 				</div>
-			</a>
-			</div>
-			<div class="card-body">
-				<div class="card-body-info subhead">{{report.location[0].parent}} - {{report.location[0].name}}
+
+				<div class="card-body">
+					<div class="card-body-info subhead">{{report.location[0].parent}} - {{report.location[0].name}}
+					</div>
+					<div class="card-body-info subhead">{{report.nb_vote}} votes
+					</div>
+					<div  class="card-body-desc">{{report.description}}
+					</div>
 				</div>
-				<div class="card-body-info subhead">{{report.nb_vote}} votes
+
+				<hr>
+				
+				<div class="card-body-actions" ng-controller="VoteController" ng-init="check"><span href="" class="button btn btn-material-lime btn-flat btn-primary" id="action_{{report.id}}" ng-click="vote(report.id)">CONFIRM</span>
 				</div>
-				<div  class="card-body-desc">{{report.description}}
-				</div>
-			</div>
-			<hr>
-			<div class="card-body-actions" ng-controller="VoteController" ng-init="check"><span href="" class="button btn btn-material-lime btn-flat btn-primary" id="action_{{report.id}}" ng-click="vote(report.id)">CONFIRM</span>
 			</div>
 		</div>
-<!-- 		</div> -->
 <!-- 	<div ng-click="moreReports(lastid)" id="more" class="more btn btn-default btn-lg">Plus d'incidents</div>
  -->	
 	</div>
