--- a/template/report.html
+++ b/template/report.html
@@ -6,28 +6,23 @@
 		</div>
 	</div>
 </nav>
+
 <div class="container">
 	<div class="card unic-card shadow-z-1">
-	<div class="item-full material-lime-300">
-	<div class="img-item">
-		<img ng-show="report.picture" class="test" ng-src="{{report.picture.thumbnail}}"></img>
-		<div class="text display2">{{report.name}}</div>
-	</div>
-	</div>
-	<div class="row card-text">
-		<div class="text-item" >
-<!-- 			<div class="note">Localisation</div>
- -->			<span class="glyphicon glyphicon-map-marker"></span> {{report.location[0].parent}} - {{report.location[0].name}}
+		<div class="list-item material-lime-300">
+			<div class="img-item">
+				<img ng-show="report.picture" class="test" ng-src="{{report.picture.thumbnail}}"></img>
+				<div class="text display2">{{report.name}}</div>
+			</div>
 		</div>
-
-	<hr>
-
-
-		<div class="text-item"  >
-<!-- 			<div class="note">Description</div>
- -->			{{report.description}}
+		<div class="row card-text">
+			<div class="text-item" >
+				<span class="glyphicon glyphicon-map-marker"></span> {{report.location[0].parent}} - {{report.location[0].name}}
+			</div>
+			<hr>
+			<div class="text-item">
+				{{report.description}}
+			</div>
 		</div>
 	</div>
-
-</div>
 </div>
