--- a/template/search.html
+++ b/template/search.html
@@ -14,6 +14,10 @@
 		<a href="#add" class="btn btn-fab btn-raised  btn-bottom btn-material-red mdi-content-add"></a>
 	</div>
 
+	<div ng-hide="go" class="row advice jumbotron">
+	Penser à activer la géolocalisation pour que la recherche démarre.
+	</div>
+
 	<div ng-show="go" class="row">
 		<div ng-repeat ="report in reports" class="col-xs-12 col-sm-6 ">
 			<div class="card shadow-z-1">
