--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,8 @@ z-index: 800;
 }
 
 .navbar-50 {
-  height:480px; 
+position: absolute;
+top: 0; bottom: 0; left: 0; right: 0;
 }
 
 .navbar-nav {
@@ -125,8 +126,7 @@ height: 100%;
 @media (max-width: 1199px) { /*hack pour empecher le chnagement de taille de la navbar */
 .navbar .navbar-brand {
   height: 60px;
-  /* padding: 10px 15px; */
-    line-height: 30px;
+  line-height: 30px;
   position: relative;
   padding-top: 15px;
   padding-right: 15px;
@@ -394,7 +394,6 @@ right:16px;
 .field-input {
   position: relative;
   background: transparent;
-  /*height: 32px;*/
   line-height: 16px;
   padding-top: 8px;
   padding-bottom: 8px;
@@ -529,8 +528,6 @@ position: relative;
 }
 
 .item {
-/*max-height:10em;
-min-height: 10em;*/
 overflow: hidden;
 }
 
@@ -544,10 +541,14 @@ overflow: hidden;
 height: 100%;
 }
 
+.ratio-169 {
+  width:100%;
+  padding-bottom: 56.25%;
+  position: relative;
+}
+
 .img-item{
-min-height: 30%;
 width: 100%;
-/*height: 100%;*/
 overflow: hidden;
 }
 
@@ -619,11 +620,9 @@ width: 100%
 .material-lime-A700 {
   background-color: #aeea00;
 }
-
 .btn-material-lime:not(.btn-link):not(.btn-flat){
 	color:white;
 }
-
 .navbar-material-lime.navbar {
 color:white;
 }
