--- a/template/add.html
+++ b/template/add.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-fixed-top navbar-material-lime shadow-z-2" role="navigation" >
 	<div class="container-header">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#"><i class="mdi-navigation-close"  style="line-height: 30px;"></i></a>
+			<a class="navbar-brand" href="home"><i class="mdi-navigation-close"  style="line-height: 30px;"></i></a>
 			<div class="navbar-brand title">Nouvel incident</div>
 		</div>
 	</div>
