--- a/template/index.html
+++ b/template/index.html
@@ -2,9 +2,9 @@
 	<div class="container-header">
 		<div class="navbar-header">
 			<ul class="nav navbar-nav">
-			<li><a class="navbar-brand" href="#"><i class="mdi-navigation"  style="line-height: 30px;"></i></a><li>
+			<li><a class="navbar-brand" href="home"><i class="mdi-navigation"  style="line-height: 30px;"></i></a><li>
 			<li><div class="navbar-brand title">BrokenStuff</div></li>
-	    	<li class="right-nav"><a href="#search"><i class="mdi-action-search"></i></a></li>
+	    	<li class="right-nav"><a href="search"><i class="mdi-action-search"></i></a></li>
 	    	</ul>
 		</div>
 	</div>
@@ -22,7 +22,7 @@
 
 </div>
 <div class="bottom">
-<a href="#add" class="btn btn-fab btn-raised btn-bottom btn-material-red mdi-content-add"></a>
+<a href="add" class="btn btn-fab btn-raised btn-bottom btn-material-red mdi-content-add"></a>
 </div>
 
 </div>
