--- a/template/migrate.html
+++ b/template/migrate.html
@@ -2,7 +2,7 @@
 	<div class="container-header">
 		<div class="navbar-header">
 			<ul class="nav navbar-nav">
-			<li><a class="navbar-brand" href="#"><i class="mdi-navigation"  style="line-height: 30px;"></i></a><li>
+			<li><a class="navbar-brand" href="home"><i class="mdi-navigation"  style="line-height: 30px;"></i></a><li>
 			<li><div class="navbar-brand title">Migration</div></li>
 	    	</ul>
 		</div>
