--- a/template/search.html
+++ b/template/search.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-fixed-top navbar-material-lime shadow-z-2" role="navigation">
 	<div class="container-header">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#"><i class="mdi-navigation-arrow-back"  style="line-height: 30px;"></i></a>
+			<a class="navbar-brand" href="home"><i class="mdi-navigation-arrow-back"  style="line-height: 30px;"></i></a>
 			<div class="navbar-brand title">Recherche</div>
 		</div>
 	</div>
@@ -11,7 +11,7 @@
 
 	<div ng-hide="loading"></div>
 	<div class="bottom">
-		<a href="#add" class="btn btn-fab btn-raised  btn-bottom btn-material-red mdi-content-add"></a>
+		<a href="add" class="btn btn-fab btn-raised  btn-bottom btn-material-red mdi-content-add"></a>
 	</div>
 
 	<div ng-hide="go" class="row advice jumbotron">
@@ -22,7 +22,7 @@
 		<div ng-repeat ="report in reports" class="col-xs-12 col-sm-6 ">
 			<div class="card shadow-z-1">
 				<div class="list-item">
-					<a href="#report/{{report.id}}">
+					<a href="report/{{report.id}}">
 					<div class="item material-lime-300">
 						<div class="text display1">{{report.name}}</div>
 						<div class="img-item">
