--- a/template/map.html
+++ b/template/map.html
@@ -7,9 +7,56 @@
 	</div>
 </nav>
 <div class="container" >
-    <ul style="display:none;"> 
-        <li><strong ng-bind="eventDetected"></strong> caught in listener.</li>
-    </ul> 
-    <leaflet geojson="geojson" markers="markers" paths="paths" defaults="defaults" center="center" width="100%" height="100%"></leaflet>
+    <div class="map">
+	    <ul style="display:none;"> 
+	        <li><strong ng-bind="eventDetected"></strong></li>
+	    </ul> 
+	    <leaflet geojson="geojson"  markers="markers" paths="paths" defaults="defaults" center="center" width="100%" height="40%"></leaflet>
+    </div>
+	<div class="list-item" id="map-list">
+
+	<div ng-show="true" class="">
+		<div ng-repeat ="geo in geojson.data.features" class="col-xs-12 col-sm-6 ">
+			<div class="card shadow-z-1">
+				<div class="list-item">
+					<a href="report/{{report.id}}">
+					<div class="item material-lime-300">
+						<div class="text display1">{{geo.properties.name}}</div>
+						<div class="img-item">
+							<img ng-show="geo.properties.picture" ng-src="{{geo.properties.picture.thumbnail}}"></img>
+						</div>
+					</div>
+					</a>
+				</div>
+
+				<div class="card-body">
+					<div class="card-body-info subhead">{{geo.properties.location[0].parent}} - {{geo.properties.location[0].name}}
+					</div>
+<!-- 					<div class="card-body-info subhead">{{report.nb_vote}} votes
+					</div> -->
+					<div  class="card-body-desc">{{geo.properties.description}}
+					</div>
+				</div>
+
+				<hr>
+				
+				<div class="card-body-actions" >
+					<button class="vote-button" id="action_{{report.id}}"  ng-controller="VoteController" ng-init="check" ng-click="vote(report.id)">
+						<span class="glyphicon glyphicon-star icon-action"></span><span>{{geo.properties.nb_vote}}</span> 
+					</button>
+
+<!-- 					<span href="" class="button btn btn-material-lime btn-flat btn-primary" id="action_{{report.id}}" ng-click="vote(report.id)">CONFIRM</span> -->
+				</div>
+			</div>
+		</div>
+<!-- 	<div ng-click="moreReports(lastid)" id="more" class="more btn btn-default btn-lg">Plus d'incidents</div>
+ -->	
+	</div>
+
+
+
+
+
+	</div>
 </div>
 
