--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ html, body{
   font-size: 16px;
 	font-family: 'Roboto', sans-serif;
   background-color: #f3f3f3;
+  color: #000;
 }
 
 html, body, #view, .navbar-50 , form {
